v2.3.2 -File check before register
